--- a/MyTrails/Views/Trail/Index.cshtml
+++ b/MyTrails/Views/Trail/Index.cshtml
@@ -67,7 +67,8 @@
         }
     }
 </table>
-    @Html.BeginForm("ImportOlympicTrails", "Trail"){ 
+    @using (Html.BeginForm("ImportOlympicTrails", "Trail"))
+    { 
     
     
 
