Added C#/JS functionality for getting the coordinates of the selected geo trail

--- a/MyTrails/Views/Trail/Combine.cshtml
+++ b/MyTrails/Views/Trail/Combine.cshtml
@@ -33,7 +33,7 @@
 
                 @foreach (var item in Model.TrailSections)
                 {
-                    <li class="list-group-item li">@item</li>
+                    <li class="list-group-item section">@item</li>
 
                 }
             </ul>
