Add Map to combine.cshtml comment and recfactor trail controller

--- a/MyTrails/Content/Site.css
+++ b/MyTrails/Content/Site.css
@@ -26,3 +26,9 @@ textarea {
 .selected-list-item{
     background-color: #AAAAAA;
 }
+
+/*trailcombine page*/
+.map{
+    height: 400px;
+    width: 100%;
+}
