Update singleTrailSection to SingleTrailSection Refactor create trailsection Comment GeometryType()

--- a/MyTrails/Views/Trail/ManuallyAddJsonToDb.cshtml
+++ b/MyTrails/Views/Trail/ManuallyAddJsonToDb.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MyTrails.ViewModels.CombineViewModel
 
 @{
-    ViewBag.Title = "Manaul data joiner";
+    ViewBag.Title = "Manual data joiner";
 }
 
 
