--- a/MyTrails/Views/Trail/ManuallyAddJsonToDb.cshtml
+++ b/MyTrails/Views/Trail/ManuallyAddJsonToDb.cshtml
@@ -43,17 +43,18 @@
 
 
 </div>
-<div id="map" class="map"></div>
+<div id="map" class="map trail-combine-map"></div>
 
 
 <script src="~/Credentials/Credentials.js"></script>
-<script>
-(function(d){
-    var file = 'https://maps.googleapis.com/maps/api/js?key='+ googlekey +'&callback=myMap';
-    var ref = d.getElementsByTagName('script')[0];
-    var js = d.createElement('script');
-    js.src = file;
-    ref.parentNode.insertBefore(js, ref);
-}(document));</script>
+@*<script>
+    (function (d) {
+        var file = 'https://maps.googleapis.com/maps/api/js?key=' + googlekey + '&callback=myMap';
+        var ref = d.getElementsByTagName('script')[0];
+        var js = d.createElement('script');
+        js.src = file;
+        ref.parentNode.insertBefore(js, ref);
+    }(document));</script>*@
 
 @Scripts.Render("~/bundles/trailcombine")
+@Scripts.Render("~/bundles/map")
