Add Trail Details Acton and View

--- a/MyTrails/Views/Trail/Details.cshtml
+++ b/MyTrails/Views/Trail/Details.cshtml
@@ -35,19 +35,27 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Elevation)
+            @Html.DisplayNameFor(model => model.TotalMiles)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Elevation)
+            @Html.DisplayFor(model => model.TotalMiles)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Miles)
+            @Html.DisplayNameFor(model => model.Status)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Miles)
+            @Html.DisplayFor(model => model.Status)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Agency)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Agency)
         </dd>
 
         <dt>
@@ -56,6 +64,22 @@
 
         <dd>
             @Html.DisplayFor(model => model.InfoHTMLLink)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Elevation)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Elevation)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.ShortDescription)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ShortDescription)
         </dd>
 
     </dl>
