--- a/MyTrails/Views/Trail/Index.cshtml
+++ b/MyTrails/Views/Trail/Index.cshtml
@@ -5,18 +5,16 @@
 }
 
 <h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.TrailName)
         </th>
-        <th>
-            Spatial
-        </th>
+        @*TODO: Create GPX Output for each trail*@
+
+        @*<th>
+                Spatial
+            </th>*@
         <th>
             @Html.DisplayNameFor(model => model.Description)
         </th>
@@ -41,46 +39,53 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.TrailName)
-        </td>
-        
-            @if (item.TrailSections.Count() > 0){
-        <td>
-            @item.TrailSections[0].Geography.WellKnownValue.WellKnownText
-        </td>
-            }
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.TrailName)
+            </td>
 
-        
-        <td>
-            @Html.DisplayFor(modelItem => item.Description)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TotalMiles)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Status)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Agency)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.InfoHTMLLink)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Elevation)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ShortDescription)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+            @*@if (item.TrailSections.Count() > 0){
+                <td>
+                    @item.TrailSections[0].Geography.WellKnownValue.WellKnownText
+                </td>
+                    }*@
+
+
+            <td>
+                @Html.DisplayFor(modelItem => item.Description)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TotalMiles)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Status)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Agency)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.InfoHTMLLink)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Elevation)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ShortDescription)
+            </td>
+            <td>
+                @if (User.IsInRole("Admin"))
+                {
+
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id })
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+
+                }
+                @Html.ActionLink("Details", "Details", new { id = item.Id })
+                @*TODO: Add Details Action to Trail Controller*@
+            </td>
+        </tr>
+    }
 
 </table>
