Minor Scripts and Html Changes

--- a/MyTrails/Views/Condition/Index.cshtml
+++ b/MyTrails/Views/Condition/Index.cshtml
@@ -78,7 +78,7 @@
     </div>
 </div>
 <script src="~/Credentials/Credentials.js"></script>
-<script const dataLocation="@Url.Action("GetDbTrailData","Trail")"></script>
+<script const dataLocation="@Url.Action("GetTrail","Trail")"></script>
 
 @Scripts.Render("~/bundles/map")
 
