--- a/MyTrails/Views/Trail/ManuallyAddJsonToDb.cshtml
+++ b/MyTrails/Views/Trail/ManuallyAddJsonToDb.cshtml
@@ -9,11 +9,11 @@
 
 
 <div>
-    Select a trail in the database and any trail names from the GeoData that match to combine their data
+    <h3>Select a trail in the database and any trail names from the GeoData that match to combine their data</h3>
 </div>
 <div class="row">
     <div class="col-sm-6">
-        <label for="Trails">Trails in Database</label>
+        <label for="Trails">Trails in Database without Geometry</label>
         <div style="overflow:auto;height:300px;">
             <ul class="list-group" id="Trails">
 
@@ -26,7 +26,7 @@
         </div>
     </div>
     <div class="col-sm-6">
-        <label for="GeoData">Trails in GeoData File</label>
+        <label for="GeoData">Trails in GeoData File with Trail in DB</label>
         <div style="overflow:auto;height:300px;">
             <ul class="list-group" id="GeoData">
 
@@ -39,10 +39,15 @@
         </div>
     </div>
 
-    <button id="combineclick" onclick="submitCombine()" value="click to combine">Save geodata to trail</button>
+
 
 
 </div>
+<div class ="row" style="text-align:center;">
+    <button id="combineclick" onclick="submitCombine()" value="click to combine">Save geodata to trail</button>
+</div>
+
+
 <div id="map" class="map trail-combine-map"></div>
 
 
