--- a/MyTrails/Views/Trail/Details.cshtml
+++ b/MyTrails/Views/Trail/Details.cshtml
@@ -30,8 +30,8 @@
             @Html.DisplayNameFor(model => model.Description)
         </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Description)
+        <dd><!---->
+            @Html.DisplayFor(model => model.ShortDescription)
         </dd>
 
         <dt>
@@ -74,13 +74,13 @@
             @Html.DisplayFor(model => model.Elevation)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ShortDescription)
+        @*<dt>
+            @Html.DisplayNameFor(model => model.Description)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ShortDescription)
-        </dd>
+            @Html.DisplayFor(model => model.Description)
+        </dd>*@
 
     </dl>
 </div>
