--- a/MyTrails/Views/Trail/OLMap.cshtml
+++ b/MyTrails/Views/Trail/OLMap.cshtml
@@ -2,6 +2,8 @@
 @{
     Layout = null;
 }
+<!--Test View for converting to Open Layers Maps to eliminate Key usage
+    This just loads and empty map-->
 
 <!doctype html>
 <html lang="en">
