--- a/MyTrails/Views/Condition/Index.cshtml
+++ b/MyTrails/Views/Condition/Index.cshtml
@@ -83,7 +83,7 @@
 <script src="~/Credentials/Credentials.js"></script>
 <script const dataLocation="@Url.Action("GetTrail","Trail")"></script>
 
-@*@Scripts.Render("~/bundles/map")*@
+@Scripts.Render("~/bundles/map")
 
 <script src="~/Scripts/site/mapindex.js"></script>
 
